<resources>
    <string name="app_name">MineSweeper</string>
    <string name="easy">Easy 10</string>
    <string name="intermediate">Intermediate 40</string>
    <string name="advanced">Advanced 99</string>
    <string name="replay">Replay</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="timer">Time: </string>
    <string name="mine">Mine: </string>
</resources>
