<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/restart"
        android:icon="@drawable/ic_replay"
        android:title="@string/replay"
        app:showAsAction="always"/>

    <item android:id="@+id/zoomIn"
        android:icon="@drawable/ic_zoom_in"
        android:title="@string/zoom_in"
        app:showAsAction="always"/>

    <item android:id="@+id/zoomOut"
        android:icon="@drawable/ic_zoom_out"
        android:title="@string/zoom_out"
        app:showAsAction="always"/>

    <item android:id="@+id/easy"
        android:title="@string/easy"
        app:showAsAction="never"/>

    <item android:id="@+id/intermediate"
        android:title="@string/intermediate"
        app:showAsAction="never"/>

    <item android:id="@+id/advanced"
        android:title="@string/advanced"
        app:showAsAction="never"/>


</menu>